--- a/modules/account_invoice_cog_translation/locale/fr_FR.po
+++ b/modules/account_invoice_cog_translation/locale/fr_FR.po
@@ -26,57 +26,17 @@ msgctxt "field:account.invoice.tax,invoice:account_invoice."
 msgid "Invoice"
 msgstr "Quittance"
 
-msgctxt "field:account.move.line,party:account."
-msgid "Party"
-msgstr "Acteur"
-
-msgctxt "field:account.payment,party:account_payment."
-msgid "Party"
-msgstr "Acteur"
-
-msgctxt "field:account.payment.sepa.mandate,party:account_payment_sepa."
-msgid "Party"
-msgstr "Acteur"
-
-msgctxt "field:bank,party:bank."
-msgid "Party"
-msgstr "Acteur"
-
-msgctxt "field:company.company,party:company."
-msgid "Party"
-msgstr "Acteur"
-
-msgctxt "field:company.employee,party:company."
-msgid "Party"
-msgstr "Acteur"
-
 msgctxt "field:party.address,invoice:account_invoice."
 msgid "Invoice"
 msgstr "Quittance"
 
-msgctxt "field:party.address,party:party."
-msgid "Party"
-msgstr "Acteur"
-
-msgctxt "field:party.address,street:party."
-msgid "Street"
-msgstr "Rue (Ligne 4)"
-
-msgctxt "field:party.address,streetbis:party."
-msgid "Street (bis)"
-msgstr "Boîte Postale (Ligne 5)"
-
-msgctxt "field:party.contact_mechanism,party:party."
-msgid "Party"
-msgstr "Acteur"
-
-msgctxt "field:party.party-party.category,party:party."
-msgid "Party"
-msgstr "Acteur"
-
 msgctxt "model:account.invoice,name:account_invoice."
 msgid "Invoice"
 msgstr "Quittance"
+
+msgctxt "model:account.invoice.line,name:account_invoice."
+msgid "Invoice Line"
+msgstr "Ligne de quittance"
 
 msgctxt "model:ir.action,name:account_invoice.act_invoice_form"
 msgid "Invoices"
@@ -98,22 +58,10 @@ msgctxt "model:ir.action,name:account_invoice.report_invoice"
 msgid "Invoice"
 msgstr "Quittance"
 
-msgctxt "model:ir.action,name:party.act_party_form"
-msgid "Parties"
-msgstr "Acteurs"
-
-msgctxt "model:ir.sequence,name:party.sequence_party"
-msgid "Party"
-msgstr "Acteur"
-
 msgctxt ""
 "model:ir.sequence.type,name:account_invoice.sequence_type_account_invoice"
 msgid "Invoice"
 msgstr "Quittance"
-
-msgctxt "model:ir.sequence.type,name:party.sequence_type_party"
-msgid "Party"
-msgstr "Acteur"
 
 msgctxt "model:ir.ui.menu,name:account_invoice.menu_invoice_out_invoice_form"
 msgid "Invoices"
@@ -123,26 +71,6 @@ msgctxt "model:ir.ui.menu,name:account_invoice.menu_invoices"
 msgid "Invoices"
 msgstr "Quittances"
 
-msgctxt "model:ir.ui.menu,name:party.menu_party"
-msgid "Party"
-msgstr "Acteur"
-
-msgctxt "model:ir.ui.menu,name:party.menu_party_form"
-msgid "Parties"
-msgstr "Acteurs"
-
-msgctxt "model:party.party,name:party."
-msgid "Party"
-msgstr "Acteur"
-
-msgctxt "odt:account.aged_balance:account."
-msgid "Party"
-msgstr "Acteur"
-
-msgctxt "odt:account.third_party_balance:account."
-msgid "Party"
-msgstr "Acteur"
-
 msgctxt "selection:account.invoice,type:account_invoice."
 msgid "Invoice"
 msgstr "Quittance"
@@ -151,6 +79,10 @@ msgctxt "selection:account.invoice.line,invoice_type:account_invoice."
 msgid "Invoice"
 msgstr "Quittance"
 
+msgctxt "view:account.invoice.line:account_invoice."
+msgid "Invoice Lines"
+msgstr "Lignes de quittance"
+
 msgctxt "view:account.invoice:account_invoice."
 msgid "Invoice"
 msgstr "Quittance"
@@ -158,19 +90,3 @@ msgstr "Quittance"
 msgctxt "view:account.invoice:account_invoice."
 msgid "Invoices"
 msgstr "Quittances"
-
-msgctxt "view:account.tax.template:account."
-msgid "Invoice"
-msgstr "Quittance"
-
-msgctxt "view:account.tax:account."
-msgid "Invoice"
-msgstr "Quittance"
-
-msgctxt "view:party.party:party."
-msgid "Parties"
-msgstr "Acteurs"
-
-msgctxt "view:party.party:party."
-msgid "Party"
-msgstr "Acteur"
