--- a/modules/account_invoice_cog_translation/locale/fr_FR.po
+++ b/modules/account_invoice_cog_translation/locale/fr_FR.po
@@ -59,6 +59,26 @@ msgid "Invoice"
 msgstr "Quittance"
 
 msgctxt ""
+"model:ir.action.act_window.domain,name:account_invoice.act_invoice_in_credit_note_domain_posted"
+msgid "Posted"
+msgstr "Emis"
+
+msgctxt ""
+"model:ir.action.act_window.domain,name:account_invoice.act_invoice_in_invoice_domain_posted"
+msgid "Posted"
+msgstr "Emis"
+
+msgctxt ""
+"model:ir.action.act_window.domain,name:account_invoice.act_invoice_out_credit_note_domain_posted"
+msgid "Posted"
+msgstr "Emis"
+
+msgctxt ""
+"model:ir.action.act_window.domain,name:account_invoice.act_invoice_out_invoice_domain_posted"
+msgid "Posted"
+msgstr "Emis"
+
+msgctxt ""
 "model:ir.sequence.type,name:account_invoice.sequence_type_account_invoice"
 msgid "Invoice"
 msgstr "Quittance"
@@ -70,6 +90,10 @@ msgstr "Quittances"
 msgctxt "model:ir.ui.menu,name:account_invoice.menu_invoices"
 msgid "Invoices"
 msgstr "Quittances"
+
+msgctxt "selection:account.invoice,state:account_invoice."
+msgid "Posted"
+msgstr "Emise"
 
 msgctxt "selection:account.invoice,type:account_invoice."
 msgid "Invoice"
