Use trytond unionMixin instead of mergedmixin for synthesis. Review #30

--- a/modules/party_cog/locale/fr_FR.po
+++ b/modules/party_cog/locale/fr_FR.po
@@ -552,7 +552,7 @@ msgstr "ID"
 
 msgctxt "field:party.synthesis.menu.relationship,name:"
 msgid "Party Relation"
-msgstr "Relation acteur"
+msgstr "Relation acteurs"
 
 msgctxt "field:party.synthesis.menu.relationship,party:"
 msgid "Party"
