--- a/modules/loan/locale/fr_FR.po
+++ b/modules/loan/locale/fr_FR.po
@@ -1,4 +1,4 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -515,7 +515,7 @@ msgstr "ID"
 
 msgctxt "field:party.synthesis.menu.loan,name:"
 msgid "Loans"
-msgstr "Prets"
+msgstr "Prêts"
 
 msgctxt "field:party.synthesis.menu.loan,party:"
 msgid "Party"
