--- a/modules/contract/locale/fr_FR.po
+++ b/modules/contract/locale/fr_FR.po
@@ -1,4 +1,4 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -71,7 +71,7 @@ msgid "End Date"
 msgstr "Date de fin"
 
 msgctxt "field:contract,extra_data:"
-msgid "Complementary Data"
+msgid "Extra Data"
 msgstr "Données complémentaires"
 
 msgctxt "field:contract,id:"
