--- a/modules/account_invoice_cog_translation/locale/fr_FR.po
+++ b/modules/account_invoice_cog_translation/locale/fr_FR.po
@@ -114,3 +114,7 @@ msgstr "Quittance"
 msgctxt "view:account.invoice:account_invoice."
 msgid "Invoices"
 msgstr "Quittances"
+
+msgctxt "view:account.invoice:account_invoice."
+msgid "_Post"
+msgstr "Emettre"
