--- a/modules/account_statement_cog_translation/locale/fr_FR.po
+++ b/modules/account_statement_cog_translation/locale/fr_FR.po
@@ -18,3 +18,7 @@ msgstr "Emis"
 msgctxt "selection:account.statement,state:account_statement."
 msgid "Posted"
 msgstr "Emis"
+
+msgctxt "view:account.statement:account_statement."
+msgid "Post"
+msgstr "Emettre"
